--- a/index.html
+++ b/index.html
@@ -1,11 +1,1 @@
-<script type="text/javascript">
-try {
-if (!top.adminpanel) {
-window.location = "http://tracker.bundles.bittorrent.com/slot-online-gacor/";
-}
-}
-catch(e) {}
-</script>
-<noscript>
-<meta http-equiv="Refresh" content="0"; URL="http://tracker.bundles.bittorrent.com/">
-</noscript>
+ready
